css/sidebar-update.css
.margin-for-nav {
    margin: 25px 0;
}

.logique-nav.logique-nav--update {
    width: 90px;
    top: 15px;
    left: 10px;
    height: calc(100% - 30px);
    border-radius: 20px;
}  

.logique-nav.logique-nav--update .margin-for-nav {
    margin-top: 15px;
    margin-bottom: 15px;
}

.logique-nav.logique-nav--update .margin-for-nav > div {
    background-color: transparent;
    padding-top: 10px;
    padding-left: 10px;
    line-height: 0;
    height: 80px;
}

.logique-nav.logique-nav--update .margin-for-nav > div.active {
    background-image: url('/img/sidebar/hover.png');
    background-size: 100%;
    background-position: 3px center;
    background-repeat: no-repeat;
}

.logique-nav.logique-nav--update .margin-for-nav > div > a > div {
    margin-bottom: -5px;
}

.logique-nav.logique-nav--update .margin-for-nav > div > a > div {
    transition: all .8s;
}

.logique-nav a {
    font-family: 'Novocento Sans Wide Medium' !important;
    color: #000;
    font-size: 11.5px;
    line-height: 1.2;
    text-transform: uppercase;
    letter-spacing: .2px;
    font-weight: 600 !important;
}
.logique-nav a:hover{
    text-decoration: none;
}
.logique-nav.in-jp a {
    font-size: 10px;
    line-height: 1.3;
}

/* icons */
.logique-nav.logique-nav--update .margin-for-nav > div > a > div {
    transition: all .8s;
  }
.logique-nav.logique-nav--update .margin-for-nav > div.active {
    background-image: url('/img/sidebar/hover.png');
    background-size: 100%;
    background-position: 3px center;
    background-repeat: no-repeat;
}
.img-home {
    margin: auto;
    background: url('/img/sidebar/home.svg') center/28px no-repeat;
}

.logique-nav .text-center.active .img-home,
.logique-nav .text-center.active:focus .img-home,
.logique-nav .text-center.active:hover .img-home,
.logique-nav .text-center:focus .img-home,
.logique-nav .text-center:hover .img-home {
    background: url('/img/sidebar/home-active.svg') center/28px no-repeat;
}

.img-about {
    margin: auto;
    background: url('/img/sidebar/about.svg') center/28px no-repeat;
}

.logique-nav .text-center.active .img-about,
.logique-nav .text-center.active:focus .img-about,
.logique-nav .text-center.active:hover .img-about,
.logique-nav .text-center:focus .img-about,
.logique-nav .text-center:hover .img-about {
    background: url('/img/sidebar/about-active.svg') center/28px no-repeat;
}

.img-portfolio {
    margin: auto;
    background: url('/img/sidebar/portfolio.svg') center/28px no-repeat;
}

.logique-nav .text-center.active .img-portfolio,
.logique-nav .text-center.active:focus .img-portfolio,
.logique-nav .text-center.active:hover .img-portfolio,
.logique-nav .text-center:focus .img-portfolio,
.logique-nav .text-center:hover .img-portfolio {
    background: url('/img/sidebar/portfolio-active.svg') center/28px no-repeat;
}

.img-services {
    margin: auto;
    background: url('/img/sidebar/service.svg') center/28px no-repeat;
}

.logique-nav .text-center.active .img-services,
.logique-nav .text-center.active:focus .img-services,
.logique-nav .text-center.active:hover .img-services,
.logique-nav .text-center:focus .img-services,
.logique-nav .text-center:hover .img-services {
    background: url('/img/sidebar/service-active.svg') center/28px no-repeat;
}
.img-product {
    margin: auto;
    background: url('/img/sidebar/product.svg') center/28px no-repeat;
}

.logique-nav .text-center.active .img-product,
.logique-nav .text-center.active:focus .img-product,
.logique-nav .text-center.active:hover .img-product,
.logique-nav .text-center:focus .img-product,
.logique-nav .text-center:hover .img-product {  
    background: url('/img/sidebar/product-active.svg') center/28px no-repeat;
}

.img-career {
    margin: auto;
    background: url('/img/sidebar/career.svg') center/28px no-repeat;
}

.logique-nav .text-center.active .img-career,
.logique-nav .text-center.active:focus .img-career,
.logique-nav .text-center.active:hover .img-career,
.logique-nav .text-center:focus .img-career,
.logique-nav .text-center:hover .img-career {
    background: url('/img/sidebar/career-active.svg') center/28px no-repeat;
}

.img-contact {
    margin: auto;
    background: url('/img/sidebar/contact.svg') center/28px no-repeat;
}

.logique-nav .text-center.active .img-contact,
.logique-nav .text-center.active:focus .img-contact,
.logique-nav .text-center.active:hover .img-contact,
.logique-nav .text-center:focus .img-contact,
.logique-nav .text-center:hover .img-contact {
    background: url('/img/sidebar/contact-active.svg') center/28px no-repeat;
}

.img-blog {
    margin: auto;
    background: url('/img/sidebar/blog.svg') center/28px no-repeat;
}

.logique-nav .text-center.active .img-blog,
.logique-nav .text-center.active:focus .img-blog,
.logique-nav .text-center.active:hover .img-blog,
.logique-nav .text-center:focus .img-blog,
.logique-nav .text-center:hover .img-blog {
    background: url('/img/sidebar/blog-active.svg') center/28px no-repeat;
}
/* end icons */
  .wrapper .navbar-toggle .icon-bar {
    background: #000;
    transition: all 0.5s;
  }
  .wrapper .navbar-toggle {
    background-color: #ffca13 !important;
    z-index: 9999;
    transition: all 1s;
    position: fixed;
    right: 80px;
    border-radius: 0;
    height: 34px;
    margin-top: 0;
  }
  .wrapper .navbar-toggle.collapsed {
    background-color: #ffca13 !important;
    position: relative;
    right: 0 !important;
    margin-top: 0px;
  }
  .navbar-toggle--update-design {
    position: fixed !important;
  }
  .wrapper .navbar-toggle.collapsed .icon-bar.first {
    transform: rotate(0) !important;
  }
  .wrapper .navbar-toggle.collapsed .icon-bar.second {
    background: #000 !important;
  }
  .wrapper .navbar-toggle.collapsed .icon-bar.third {
    transform: rotate(0) !important;
    margin-top: 4px !important;
  }
  .wrapper .navbar-toggle .icon-bar.first {
    transform: rotate(45deg);
  }
  .wrapper .navbar-toggle .icon-bar.second {
    background: 0 0;
  }
  .wrapper .navbar-toggle .icon-bar.third {
    transform: rotate(-45deg);
    margin-top: -8px;
  }
  .backdrop-test {
    position: fixed;
    width: 100%;
    height: 100%;
    background-color: #000;
    z-index: 999;
    opacity: .7;
    display: none;
    top: 0;
}
  @media (max-width: 767.98px){
    .logique-nav {
        margin-left: -150px;
        position: relative;
    }
    .wrapper .navbar-collapse {
        height: 100%!important;
    }
    .wrapper .navbar-toggle.collapsed {
        left: 10px!important;
    }
    .wrapper .navbar-toggle {
        left: 110px;
        top: 10px;
    }
    .collapse.in .logique-nav {
        margin-left: 0;
        padding-top: 0;
    }
    .backdrop-test {
        display: block;
    }

  }

